# ipc-channel-adapter

./: Cargo.toml  README.md  justfile
examples/asynch/ipc_child/: Cargo.toml
examples/asynch/ipc_child/src/: main.rs
examples/asynch/ipc_host/: Cargo.toml
examples/asynch/ipc_host/src/: main.rs
examples/sync/ipc_child/: Cargo.toml
examples/sync/ipc_child/src/: main.rs
examples/sync/ipc_child/src copy/: main.rs
examples/sync/ipc_host/: Cargo.toml
examples/sync/ipc_host/src/: main.rs
ipc_adapter/: Cargo.toml
ipc_adapter/src/: context.rs  lib.rs
ipc_adapter/src/broadcast_channel/asynch/: broadcast_channel.rs  channel_broadcast.rs
ipc_adapter/src/broadcast_channel/sync/: broadcast_channel.rs
ipc_adapter/src/child/sync/: host_receiver.rs  host_sender.rs
ipc_adapter/src/host/: mod.rs
ipc_adapter/src/host/sync/: child_receiver.rs  child_sender.rs
ipc_adapter/src/ipc/: mod.rs
ipc_adapter/src/ipc/asynch/: ipc_child.rs  ipc_host.rs
ipc_adapter/src/ipc/sync/: ipc_child.rs  ipc_host.rs
ipc_channel_adapter/: Cargo.toml  README.md
ipc_channel_adapter/src/: lib.rs
ipc_channel_adapter/src/broadcast_channel/asynch/: broadcast_channel.rs  channel_broadcast.rs
ipc_channel_adapter/src/broadcast_channel/sync/: broadcast_channel.rs
ipc_channel_adapter/src/child/: mod.rs
ipc_channel_adapter/src/child/asynch/: host_receiver.rs  host_sender.rs
ipc_channel_adapter/src/child/sync/: host_receiver.rs  host_sender.rs  mod.rs
ipc_channel_adapter/src/host/asynch/: child_receiver.rs  child_sender.rs
ipc_channel_adapter/src/host/sync/: child_receiver.rs  child_sender.rs
ipc_channel_adapter/src/ipc/asynch/: create_ipc_child.rs  create_ipc_host.rs  ipc_host.rs
ipc_channel_adapter/src/ipc/sync/: client_connection.rs  create_ipc_child.rs  create_ipc_host.rs  host_channel.rs  ipc_child.rs  ipc_host.rs  mod.rs
testing/ipc_child/: Cargo.toml
testing/ipc_child/src/: main.rs
testing/ipc_host/: Cargo.toml
testing/ipc_host/src/: main.rs
testing/sync/ipc_child/: Cargo.toml
testing/sync/ipc_child/src/: main.rs
testing/sync/ipc_host/: Cargo.toml
testing/sync/ipc_host/src/: main.rs
