[workspace]

resolver = "2"
members = [
  "ipc_channel_adapter", 
  "examples/sync/ipc_host",
  "examples/sync/ipc_child", 
  "examples/asynch/ipc_host",
  "examples/asynch/ipc_child",
]

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
