[package]
name = "ipc_channel_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
async = ["tokio"]

[dependencies]
serde = { version = "^1.0.0", features = ["derive"] }
ipc-channel = { version = "^0.18.0", features = ["memfd"] }
tokio = { version = "^1.0.0", features = ["full"], optional = true }
