[package]
name = "ipc_child_asynch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
ipc_channel_adapter = { path = "../../../ipc_channel_adapter",  features = ["async"] }
tokio = { version = "^1.0.0", features = ["full"] }
